Source/WebKit/GPUProcess/webrtc/RemoteMediaRecorder.cpp
@@ -137,4 +137,6 @@ void RemoteMediaRecorder::stopRecording()
 
 }
 
+#undef MESSAGE_CHECK
+
 #endif // PLATFORM(COCOA) && ENABLE(GPU_PROCESS) && ENABLE(MEDIA_STREAM) && HAVE(AVASSETWRITERDELEGATE)
